plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}
ext {
    springCloudVersion = "2025.0.0"
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// MONGO
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// REDIS
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// POSTGRE
	runtimeOnly 'org.postgresql:postgresql'

	// SECURITY
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// LOMBOK
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// VALIDATION
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// SPRING BOOT
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// TEST
	// H2 데이터베이스 의존성
	testImplementation 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-core:5.5.0'


	// JWT
	implementation 'io.jsonwebtoken:jjwt:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	//.env
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// S3
	implementation 'software.amazon.awssdk:s3:2.25.54'

	// ELASTIC SEARCH
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// HTTP CLIENT
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}

tasks.named('test') {
	useJUnitPlatform()
}
